# baremetal-thing

./: .gitignore  Cargo.toml  README.md  build.sh  run.sh
src/: main.rs
